Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31240

Crash with condition pushable into derived and containing outer reference

    XMLWordPrintable

Details

    Description

      Hello,

      We could see the below error with which mariadb server crashes and reloads

      230511  7:38:01 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.5.20-MariaDB source revision: b735ca47738a1d2e995a429f40afd620eb7d8843
      key_buffer_size=134217728
      read_buffer_size=131072
      max_used_connections=1
      max_threads=602
      thread_count=1
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 1456372 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x7f8e74000c58
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f90580aebd8 thread_stack 0x49000
      /usr/sbin/mariadbd(my_print_stacktrace+0x2e)[0x555b3770932e]
      /usr/sbin/mariadbd(handle_fatal_signal+0x485)[0x555b37186825]
      /lib64/libpthread.so.0(+0x12cf0)[0x7f905cb89cf0]
      /usr/sbin/mariadbd(_ZN13st_join_table21choose_best_splittingEjyPy+0x531)[0x555b37109b41]
      /usr/sbin/mariadbd(_Z16best_access_pathP4JOINP13st_join_tableyPK8POSITIONjbdPS3_S6_+0x12b)[0x555b36fbbd2b]
      /usr/sbin/mariadbd(+0x7b440d)[0x555b36fbf40d]
      /usr/sbin/mariadbd(_Z11choose_planP4JOINy+0x262)[0x555b36fbfe32]
      /usr/sbin/mariadbd(_ZN4JOIN14optimize_innerEv+0x344e)[0x555b36fe753e]
      /usr/sbin/mariadbd(_ZN4JOIN8optimizeEv+0xa0)[0x555b36fe7be0]
      /usr/sbin/mariadbd(_ZN13st_select_lex31optimize_unflattened_subqueriesEb+0x12d)[0x555b36f63e1d]
      /usr/sbin/mariadbd(_Z12mysql_updateP3THDP10TABLE_LISTR4ListI4ItemES6_PS4_jP8st_orderybPySA_+0x651)[0x555b3703b2b1]
      /usr/sbin/mariadbd(_Z21mysql_execute_commandP3THD+0x31cf)[0x555b36f8cef1]
      /usr/sbin/mariadbd(_Z11mysql_parseP3THDPcjP12Parser_statebb+0x247)[0x555b36f7cb0a]
      /usr/sbin/mariadbd(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x1dc2)[0x555b36f880a7]
      /usr/sbin/mariadbd(_Z10do_commandP3THD+0x11e)[0x555b36f89265]
      /usr/sbin/mariadbd(_Z24do_handle_one_connectionP7CONNECTb+0x501)[0x555b370805b1]
      /usr/sbin/mariadbd(handle_one_connection+0x5d)[0x555b3708090d]
      /usr/sbin/mariadbd(+0xba7ea3)[0x555b373b2ea3]
      /lib64/libpthread.so.0(+0x81cf)[0x7f905cb7f1cf]
      /lib64/libc.so.6(clone+0x43)[0x7f905becfe73]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f8e74012d10): UPDATE mdlov_report_coursesize rc
                          SET backupsize = (SELECT bf.filesize FROM (SELECT id AS course, SUM(filesize) AS filesize
                    FROM (SELECT c.id, f.filesize
                            FROM mdlov_course c
                            JOIN mdlov_context cx ON cx.contextlevel = 50 AND cx.instanceid = c.id
                            JOIN mdlov_files f ON f.contextid = cx.id AND f.component = 'backup') x
                  GROUP BY id) bf WHERE bf.course = rc.course)
       
      Connection ID (thread ID): 4
      Status: NOT_KILLED
       
      Optimizer switch: index_merge=on,index_merge_union=on,index_merge_sort_union=on,index_merge_intersection=on,index_merge_sort_intersection=off,engine_condition_pushdown=off,index_condition_pushdown=on,derived_merge=on,derived_with_keys=on,firstmatch=on,loosescan=on,materialization=on,in_to_exists=on,semijoin=on,partial_match_rowid_merge=on,partial_match_table_scan=on,subquery_cache=on,mrr=off,mrr_cost_based=off,mrr_sort_keys=off,outer_join_with_cache=on,semijoin_with_cache=on,join_cache_incremental=on,join_cache_hashed=on,join_cache_bka=on,optimize_join_buffer_size=on,table_elimination=on,extended_keys=on,exists_to_in=on,orderby_uses_equalities=on,condition_pushdown_for_derived=on,split_materialized=on,condition_pushdown_for_subquery=on,rowid_filter=on,condition_pushdown_from_having=on,not_null_range_scan=off
       
      The manual page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mysqld/ contains
      information that should help you find out what is causing the crash.
      Writing a core file...
      Working directory at /var/lib/mysql
      Resource Limits:
      Limit                     Soft Limit           Hard Limit           Units     
      Max cpu time              unlimited            unlimited            seconds   
      Max file size             unlimited            unlimited            bytes     
      Max data size             unlimited            unlimited            bytes     
      Max stack size            8388608              unlimited            bytes     
      Max core file size        0                    unlimited            bytes     
      Max resident set          unlimited            unlimited            bytes     
      Max processes             256596               256596               processes 
      Max open files            40000                40000                files     
      Max locked memory         65536                65536                bytes     
      Max address space         unlimited            unlimited            bytes     
      Max file locks            unlimited            unlimited            locks     
      Max pending signals       256596               256596               signals   
      Max msgqueue size         819200               819200               bytes     
      Max nice priority         0                    0                    
      Max realtime priority     0                    0                    
      Max realtime timeout      unlimited            unlimited            us        
      Core pattern: |/usr/lib/systemd/systemd-coredump %P %u %g %s %t %c %h %e
      

      Attachments

        Issue Links

          Activity

            People

              psergei Sergei Petrunia
              nathang Nathan
              Votes:
              0 Vote for this issue
              Watchers:
              14 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 0d
                  0d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2.25d
                  2.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.